// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stylesheet Animations - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"@-webkit-keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@-webkit-keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        -webkit-transform: scale(1);
                transform: scale(1)
    }
    25% {
        -webkit-transform: scale(2, 3);
                transform: scale(2, 3)
    }
    50% {
        -webkit-transform: scale(5, 5);
                transform: scale(5, 5)
    }
    75% {
        -webkit-transform: scale(4, 0.5);
                transform: scale(4, 0.5)
    }
    to {
        -webkit-transform: scale(1);
                transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        -webkit-transform: scale(1);
                transform: scale(1)
    }
    25% {
        -webkit-transform: scale(2, 3);
                transform: scale(2, 3)
    }
    50% {
        -webkit-transform: scale(5, 5);
                transform: scale(5, 5)
    }
    75% {
        -webkit-transform: scale(4, 0.5);
                transform: scale(4, 0.5)
    }
    to {
        -webkit-transform: scale(1);
                transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@-webkit-keyframes ULbBx {
    from {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(359deg);
                transform: rotate(359deg)
    }
}
@keyframes ULbBx {
    from {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(359deg);
                transform: rotate(359deg)
    }
}
._2MisJ {
    margin-left: 300px;
    display: -webkit-flex;
    display: flex;
    -webkit-justify-content: center;
            justify-content: center;
    -webkit-align-items: center;
            align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 3s;
            animation-duration: 3s;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-name: Xxm1J;
            animation-name: Xxm1J
}
@media (min-width: 700px) {
    ._2MisJ:hover {
        -webkit-animation: Yuc9Q 1.5s ease-out forwards;
                animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    ._2MisJ {
        -webkit-animation-timing-function: linear;
                animation-timing-function: linear;
        -webkit-animation-duration: 1.5s;
                animation-duration: 1.5s;
        -webkit-animation-iteration-count: infinite;
                animation-iteration-count: infinite;
        -webkit-animation-name: ULbBx;
                animation-name: ULbBx
    }
}
@-webkit-keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
._2yo5n_10hq {
    height: 200px;
    width: 200px
}
._2MisJ ~ ._2yo5n_10hq {
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 3s;
            animation-duration: 3s;
    -webkit-animation-direction: alternate;
            animation-direction: alternate;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-iteration-count: infinite;
            animation-iteration-count: infinite;
    -webkit-animation-name: _3W3VQ;
            animation-name: _3W3VQ
}
@-webkit-keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
._2yo5n_3uaa {
    height: 200px;
    width: 200px
}
._2MisJ ~ ._2yo5n_3uaa {
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 1s;
            animation-duration: 1s;
    -webkit-animation-direction: alternate;
            animation-direction: alternate;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-iteration-count: infinite;
            animation-iteration-count: infinite;
    -webkit-animation-name: _0Mv05;
            animation-name: _0Mv05
}
"
`;

exports[`Stylesheet Animations - Custom idents - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes ULbBx {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
.animations-unthemedAnimation_2MisJ {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: Xxm1J
}
@media (min-width: 700px) {
    .animations-unthemedAnimation_2MisJ:hover {
        animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    .animations-unthemedAnimation_2MisJ {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: ULbBx
    }
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.animations-themedAnimation_2yo5n-fastTheme_3u {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2MisJ ~ .animations-themedAnimation_2yo5n-fastTheme_3u {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _0Mv05
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.animations-themedAnimation_2yo5n-slowTheme_10 {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2MisJ ~ .animations-themedAnimation_2yo5n-slowTheme_10 {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _3W3VQ
}
"
`;

exports[`Stylesheet Animations - Development mode - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes ULbBx {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
.animations-unthemedAnimation_2MisJ {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: Xxm1J
}
@media (min-width: 700px) {
    .animations-unthemedAnimation_2MisJ:hover {
        animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    .animations-unthemedAnimation_2MisJ {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: ULbBx
    }
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.animations-themedAnimation_2yo5n_animations-slowTheme_10hq {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2MisJ ~ .animations-themedAnimation_2yo5n_animations-slowTheme_10hq {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _3W3VQ
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.animations-themedAnimation_2yo5n_animations-fastTheme_3uaa {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2MisJ ~ .animations-themedAnimation_2yo5n_animations-fastTheme_3uaa {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _0Mv05
}
"
`;

exports[`Stylesheet Animations - Production mode - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J{0%{opacity:0}to{opacity:1}}@keyframes Yuc9Q{0%{color:hsla(0,0%,100%,0);transform:scale(1)}25%{transform:scale(2,3)}50%{transform:scale(5)}75%{transform:scale(4,.5)}to{transform:scale(1);color:#fff}}@keyframes ULbBx{0%{transform:rotate(0deg)}to{transform:rotate(359deg)}}._2MisJ{margin-left:300px;display:flex;justify-content:center;align-items:center;height:200px;width:200px;background-color:#ff0;color:hsla(0,0%,100%,0);animation-timing-function:linear;animation-duration:3s;animation-fill-mode:both;animation-name:Xxm1J}@media (min-width:700px){._2MisJ:hover{animation:Yuc9Q 1.5s ease-out forwards}}@media (max-width:699px){._2MisJ{animation-timing-function:linear;animation-duration:1.5s;animation-iteration-count:infinite;animation-name:ULbBx}}
@keyframes _0Mv05{0%{background-color:#fff}to{background-color:red}}._2yo5n_3uaa{height:200px;width:200px}._2MisJ~._2yo5n_3uaa{animation-timing-function:linear;animation-duration:1s;animation-direction:alternate;animation-fill-mode:both;animation-iteration-count:infinite;animation-name:_0Mv05}
@keyframes _3W3VQ{0%{background-color:#fff}to{background-color:#00f}}._2yo5n_10hq{height:200px;width:200px}._2MisJ~._2yo5n_10hq{animation-timing-function:linear;animation-duration:3s;animation-direction:alternate;animation-fill-mode:both;animation-iteration-count:infinite;animation-name:_3W3VQ}
"
`;

exports[`Stylesheet Animations - Theme function ident - should create a deterministic stylesheet 1`] = `
"@keyframes Xxm1J {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes Yuc9Q {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes ULbBx {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
._2MisJ {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: Xxm1J
}
@media (min-width: 700px) {
    ._2MisJ:hover {
        animation: Yuc9Q 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    ._2MisJ {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: ULbBx
    }
}
@keyframes _0Mv05 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
._2yo5n_fast_3u {
    height: 200px;
    width: 200px
}
._2MisJ ~ ._2yo5n_fast_3u {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _0Mv05
}
@keyframes _3W3VQ {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
._2yo5n_slow_10 {
    height: 200px;
    width: 200px
}
._2MisJ ~ ._2yo5n_slow_10 {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _3W3VQ
}
"
`;

exports[`Stylesheet Complex selectors - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._3yryF:focus {
    color: purple
}
._3yryF ._2wcfh {
    background-color: red
}
._3yryF ._3vGr3_1ld8, ._3yryF ._3vGr3_1fZK {
    background-color: blue
}
._3vGr3_1ld8 ._2wcfh ._3yryF, ._3vGr3_1fZK ._2wcfh ._3yryF {
    background-color: black
}
html ._3yryF {
    position: absolute
}
@media screen and (min-width: 300px) {
    ._3yryF {
        color: green
    }
    ._3yryF ._2wcfh {
        color: red
    }
    ._3yryF ._3vGr3_1ld8, ._3yryF ._3vGr3_1fZK {
        color: blue
    }
    ._3vGr3_1ld8 ._2wcfh ._3yryF, ._3vGr3_1fZK ._2wcfh ._3yryF {
        color: black
    }
}
._2Cl3x_1fZK:focus {
    color: purple
}
._2Cl3x_1fZK ._2wcfh {
    background-color: red
}
._2Cl3x_1fZK ._3vGr3_1fZK {
    background-color: blue
}
._3vGr3_1fZK ._2wcfh ._2Cl3x_1fZK {
    background-color: black
}
@media screen and (min-width: 1000px) {
    ._2Cl3x_1fZK {
        color: green
    }
    ._2Cl3x_1fZK ._2wcfh {
        color: red
    }
    ._2Cl3x_1fZK ._3vGr3_1fZK {
        color: blue
    }
    ._3vGr3_1fZK ._2wcfh ._2Cl3x_1fZK {
        color: black
    }
}
._2Cl3x_1ld8:focus {
    color: purple
}
._2Cl3x_1ld8 ._2wcfh {
    background-color: red
}
._2Cl3x_1ld8 ._3vGr3_1ld8 {
    background-color: blue
}
._3vGr3_1ld8 ._2wcfh ._2Cl3x_1ld8 {
    background-color: black
}
@media screen and (min-width: 700px) {
    ._2Cl3x_1ld8 {
        color: green
    }
    ._2Cl3x_1ld8 ._2wcfh {
        color: red
    }
    ._2Cl3x_1ld8 ._3vGr3_1ld8 {
        color: blue
    }
    ._3vGr3_1ld8 ._2wcfh ._2Cl3x_1ld8 {
        color: black
    }
}
"
`;

exports[`Stylesheet Complex selectors - Custom idents - should create a deterministic stylesheet 1`] = `
".complexSelectors-styles_blue_3yryF:focus {
    color: purple
}
.complexSelectors-styles_blue_3yryF .complexSelectors-unthemedClassStyle_2wcfh {
    background-color: red
}
.complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3-big_1l, .complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3-small_1f {
    background-color: blue
}
.complexSelectors-themedStyle_3vGr3-big_1l .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF, .complexSelectors-themedStyle_3vGr3-small_1f .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF {
    background-color: black
}
html .complexSelectors-styles_blue_3yryF {
    position: absolute
}
@media screen and (min-width: 300px) {
    .complexSelectors-styles_blue_3yryF {
        color: green
    }
    .complexSelectors-styles_blue_3yryF .complexSelectors-unthemedClassStyle_2wcfh {
        color: red
    }
    .complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3-big_1l, .complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3-small_1f {
        color: blue
    }
    .complexSelectors-themedStyle_3vGr3-big_1l .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF, .complexSelectors-themedStyle_3vGr3-small_1f .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF {
        color: black
    }
}
.complexSelectors-red_2Cl3x-big_1l:focus {
    color: purple
}
.complexSelectors-red_2Cl3x-big_1l .complexSelectors-unthemedClassStyle_2wcfh {
    background-color: red
}
.complexSelectors-red_2Cl3x-big_1l .complexSelectors-themedStyle_3vGr3-big_1l {
    background-color: blue
}
.complexSelectors-themedStyle_3vGr3-big_1l .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x-big_1l {
    background-color: black
}
@media screen and (min-width: 700px) {
    .complexSelectors-red_2Cl3x-big_1l {
        color: green
    }
    .complexSelectors-red_2Cl3x-big_1l .complexSelectors-unthemedClassStyle_2wcfh {
        color: red
    }
    .complexSelectors-red_2Cl3x-big_1l .complexSelectors-themedStyle_3vGr3-big_1l {
        color: blue
    }
    .complexSelectors-themedStyle_3vGr3-big_1l .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x-big_1l {
        color: black
    }
}
.complexSelectors-red_2Cl3x-small_1f:focus {
    color: purple
}
.complexSelectors-red_2Cl3x-small_1f .complexSelectors-unthemedClassStyle_2wcfh {
    background-color: red
}
.complexSelectors-red_2Cl3x-small_1f .complexSelectors-themedStyle_3vGr3-small_1f {
    background-color: blue
}
.complexSelectors-themedStyle_3vGr3-small_1f .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x-small_1f {
    background-color: black
}
@media screen and (min-width: 1000px) {
    .complexSelectors-red_2Cl3x-small_1f {
        color: green
    }
    .complexSelectors-red_2Cl3x-small_1f .complexSelectors-unthemedClassStyle_2wcfh {
        color: red
    }
    .complexSelectors-red_2Cl3x-small_1f .complexSelectors-themedStyle_3vGr3-small_1f {
        color: blue
    }
    .complexSelectors-themedStyle_3vGr3-small_1f .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x-small_1f {
        color: black
    }
}
"
`;

exports[`Stylesheet Complex selectors - Development mode - should create a deterministic stylesheet 1`] = `
".complexSelectors-styles_blue_3yryF:focus {
    color: purple
}
.complexSelectors-styles_blue_3yryF .complexSelectors-unthemedClassStyle_2wcfh {
    background-color: red
}
.complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8, .complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK {
    background-color: blue
}
.complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8 .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF, .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF {
    background-color: black
}
html .complexSelectors-styles_blue_3yryF {
    position: absolute
}
@media screen and (min-width: 300px) {
    .complexSelectors-styles_blue_3yryF {
        color: green
    }
    .complexSelectors-styles_blue_3yryF .complexSelectors-unthemedClassStyle_2wcfh {
        color: red
    }
    .complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8, .complexSelectors-styles_blue_3yryF .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK {
        color: blue
    }
    .complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8 .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF, .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-styles_blue_3yryF {
        color: black
    }
}
.complexSelectors-red_2Cl3x_complexSelectors-big_1ld8:focus {
    color: purple
}
.complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 .complexSelectors-unthemedClassStyle_2wcfh {
    background-color: red
}
.complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 .complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8 {
    background-color: blue
}
.complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8 .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 {
    background-color: black
}
@media screen and (min-width: 700px) {
    .complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 {
        color: green
    }
    .complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 .complexSelectors-unthemedClassStyle_2wcfh {
        color: red
    }
    .complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 .complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8 {
        color: blue
    }
    .complexSelectors-themedStyle_3vGr3_complexSelectors-big_1ld8 .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x_complexSelectors-big_1ld8 {
        color: black
    }
}
.complexSelectors-red_2Cl3x_complexSelectors-small_1fZK:focus {
    color: purple
}
.complexSelectors-red_2Cl3x_complexSelectors-small_1fZK .complexSelectors-unthemedClassStyle_2wcfh {
    background-color: red
}
.complexSelectors-red_2Cl3x_complexSelectors-small_1fZK .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK {
    background-color: blue
}
.complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x_complexSelectors-small_1fZK {
    background-color: black
}
@media screen and (min-width: 1000px) {
    .complexSelectors-red_2Cl3x_complexSelectors-small_1fZK {
        color: green
    }
    .complexSelectors-red_2Cl3x_complexSelectors-small_1fZK .complexSelectors-unthemedClassStyle_2wcfh {
        color: red
    }
    .complexSelectors-red_2Cl3x_complexSelectors-small_1fZK .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK {
        color: blue
    }
    .complexSelectors-themedStyle_3vGr3_complexSelectors-small_1fZK .complexSelectors-unthemedClassStyle_2wcfh .complexSelectors-red_2Cl3x_complexSelectors-small_1fZK {
        color: black
    }
}
"
`;

exports[`Stylesheet Complex selectors - Production mode - should create a deterministic stylesheet 1`] = `
"._3yryF:focus{color:purple}._3yryF ._2wcfh{background-color:red}._3yryF ._3vGr3_1fZK,._3yryF ._3vGr3_1ld8{background-color:#00f}._3vGr3_1fZK ._2wcfh ._3yryF,._3vGr3_1ld8 ._2wcfh ._3yryF{background-color:#000}html ._3yryF{position:absolute}@media screen and (min-width:300px){._3yryF{color:green}._3yryF ._2wcfh{color:red}._3yryF ._3vGr3_1fZK,._3yryF ._3vGr3_1ld8{color:#00f}._3vGr3_1fZK ._2wcfh ._3yryF,._3vGr3_1ld8 ._2wcfh ._3yryF{color:#000}}
._2Cl3x_1ld8:focus{color:purple}._2Cl3x_1ld8 ._2wcfh{background-color:red}._2Cl3x_1ld8 ._3vGr3_1ld8{background-color:#00f}._3vGr3_1ld8 ._2wcfh ._2Cl3x_1ld8{background-color:#000}@media screen and (min-width:700px){._2Cl3x_1ld8{color:green}._2Cl3x_1ld8 ._2wcfh{color:red}._2Cl3x_1ld8 ._3vGr3_1ld8{color:#00f}._3vGr3_1ld8 ._2wcfh ._2Cl3x_1ld8{color:#000}}
._2Cl3x_1fZK:focus{color:purple}._2Cl3x_1fZK ._2wcfh{background-color:red}._2Cl3x_1fZK ._3vGr3_1fZK{background-color:#00f}._3vGr3_1fZK ._2wcfh ._2Cl3x_1fZK{background-color:#000}@media screen and (min-width:1000px){._2Cl3x_1fZK{color:green}._2Cl3x_1fZK ._2wcfh{color:red}._2Cl3x_1fZK ._3vGr3_1fZK{color:#00f}._3vGr3_1fZK ._2wcfh ._2Cl3x_1fZK{color:#000}}
"
`;

exports[`Stylesheet Complex selectors - Theme function ident - should create a deterministic stylesheet 1`] = `
"._3yryF:focus {
    color: purple
}
._3yryF ._2wcfh {
    background-color: red
}
._3yryF ._3vGr3_big_theme_1l, ._3yryF ._3vGr3_small_theme_1f {
    background-color: blue
}
._3vGr3_big_theme_1l ._2wcfh ._3yryF, ._3vGr3_small_theme_1f ._2wcfh ._3yryF {
    background-color: black
}
html ._3yryF {
    position: absolute
}
@media screen and (min-width: 300px) {
    ._3yryF {
        color: green
    }
    ._3yryF ._2wcfh {
        color: red
    }
    ._3yryF ._3vGr3_big_theme_1l, ._3yryF ._3vGr3_small_theme_1f {
        color: blue
    }
    ._3vGr3_big_theme_1l ._2wcfh ._3yryF, ._3vGr3_small_theme_1f ._2wcfh ._3yryF {
        color: black
    }
}
._2Cl3x_small_theme_1f:focus {
    color: purple
}
._2Cl3x_small_theme_1f ._2wcfh {
    background-color: red
}
._2Cl3x_small_theme_1f ._3vGr3_small_theme_1f {
    background-color: blue
}
._3vGr3_small_theme_1f ._2wcfh ._2Cl3x_small_theme_1f {
    background-color: black
}
@media screen and (min-width: 1000px) {
    ._2Cl3x_small_theme_1f {
        color: green
    }
    ._2Cl3x_small_theme_1f ._2wcfh {
        color: red
    }
    ._2Cl3x_small_theme_1f ._3vGr3_small_theme_1f {
        color: blue
    }
    ._3vGr3_small_theme_1f ._2wcfh ._2Cl3x_small_theme_1f {
        color: black
    }
}
._2Cl3x_big_theme_1l:focus {
    color: purple
}
._2Cl3x_big_theme_1l ._2wcfh {
    background-color: red
}
._2Cl3x_big_theme_1l ._3vGr3_big_theme_1l {
    background-color: blue
}
._3vGr3_big_theme_1l ._2wcfh ._2Cl3x_big_theme_1l {
    background-color: black
}
@media screen and (min-width: 700px) {
    ._2Cl3x_big_theme_1l {
        color: green
    }
    ._2Cl3x_big_theme_1l ._2wcfh {
        color: red
    }
    ._2Cl3x_big_theme_1l ._3vGr3_big_theme_1l {
        color: blue
    }
    ._3vGr3_big_theme_1l ._2wcfh ._2Cl3x_big_theme_1l {
        color: black
    }
}
"
`;

exports[`Stylesheet Multi file - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
".zkB3l {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Custom idents - should create a deterministic stylesheet 1`] = `
".multi-multiStyles_zkB3l {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Development mode - should create a deterministic stylesheet 1`] = `
".multi-multiStyles_zkB3l {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Production mode - should create a deterministic stylesheet 1`] = `
".zkB3l{color:#00f}
"
`;

exports[`Stylesheet Multi file - Theme function ident - should create a deterministic stylesheet 1`] = `
".zkB3l {
    color: blue
}
"
`;

exports[`Stylesheet Simple - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.PxCM2 {
    height: 100px;
    width: 100px;
    color: blue;
    display: -webkit-flex;
    display: flex
}
.PxCM2:hover {
    background-color: purple
}
._2QKEX {
    color: red
}
body ._2QKEX {
    z-index: 2
}
html .PxCM2 {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._2QKEX {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Custom idents - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.simple-mainStyles_blue_PxCM2 {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.simple-mainStyles_blue_PxCM2:hover {
    background-color: purple
}
.simple-mainStyles_red_2QKEX {
    color: red
}
body .simple-mainStyles_red_2QKEX {
    z-index: 2
}
html .simple-mainStyles_blue_PxCM2 {
    position: absolute
}
@media screen and (min-width: 700px) {
    .simple-mainStyles_red_2QKEX {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Development mode - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.simple-mainStyles_blue_PxCM2 {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.simple-mainStyles_blue_PxCM2:hover {
    background-color: purple
}
.simple-mainStyles_red_2QKEX {
    color: red
}
body .simple-mainStyles_red_2QKEX {
    z-index: 2
}
html .simple-mainStyles_blue_PxCM2 {
    position: absolute
}
@media screen and (min-width: 700px) {
    .simple-mainStyles_red_2QKEX {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Production mode - should create a deterministic stylesheet 1`] = `
"body,html{background-color:pink}.PxCM2{height:100px;width:100px;color:#00f;display:flex}.PxCM2:hover{background-color:purple}._2QKEX{color:red}body ._2QKEX{z-index:2}html .PxCM2{position:absolute}@media screen and (min-width:700px){._2QKEX{color:green}}
"
`;

exports[`Stylesheet Simple - Theme function ident - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.PxCM2 {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.PxCM2:hover {
    background-color: purple
}
._2QKEX {
    color: red
}
body ._2QKEX {
    z-index: 2
}
html .PxCM2 {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._2QKEX {
        color: green
    }
}
"
`;

exports[`Stylesheet Themed - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._6tvyw {
    z-index: 1;
    display: -webkit-flex;
    display: flex
}
.inLwD {
    z-index: 2
}
._2cR4h {
    z-index: 3
}
._1eYVB_3h9W {
    background-color: yellow
}
._3a3qh_3h9W {
    height: 12px
}
._1FZ-j_3h9W {
    line-height: 6
}
._1eYVB_3JfQ {
    background-color: red
}
._3a3qh_3JfQ {
    height: 8px
}
._1FZ-j_3JfQ {
    line-height: 4
}
"
`;

exports[`Stylesheet Themed - Custom idents - should create a deterministic stylesheet 1`] = `
".stylesOne-regularStyle_6tvyw {
    z-index: 1;
    display: flex
}
.stylesTwo-regularStyle_inLwD {
    z-index: 2
}
.stylesThree-regularStyle_2cR4h {
    z-index: 3
}
.stylesOne-themeStyle_1eYVB-themeOne_3h {
    background-color: yellow
}
.stylesTwo-themeStyle_3a3qh-themeOne_3h {
    height: 12px
}
.stylesThree-themeStyle_1FZ-j-themeOne_3h {
    line-height: 6
}
.stylesOne-themeStyle_1eYVB-themeTwo_3J {
    background-color: red
}
.stylesTwo-themeStyle_3a3qh-themeTwo_3J {
    height: 8px
}
.stylesThree-themeStyle_1FZ-j-themeTwo_3J {
    line-height: 4
}
"
`;

exports[`Stylesheet Themed - Development mode - should create a deterministic stylesheet 1`] = `
".stylesOne-regularStyle_6tvyw {
    z-index: 1;
    display: flex
}
.stylesTwo-regularStyle_inLwD {
    z-index: 2
}
.stylesThree-regularStyle_2cR4h {
    z-index: 3
}
.stylesOne-themeStyle_1eYVB_themeOne-themeOne_3h9W {
    background-color: yellow
}
.stylesTwo-themeStyle_3a3qh_themeOne-themeOne_3h9W {
    height: 12px
}
.stylesThree-themeStyle_1FZ-j_themeOne-themeOne_3h9W {
    line-height: 6
}
.stylesOne-themeStyle_1eYVB_themeTwo-themeTwo_3JfQ {
    background-color: red
}
.stylesTwo-themeStyle_3a3qh_themeTwo-themeTwo_3JfQ {
    height: 8px
}
.stylesThree-themeStyle_1FZ-j_themeTwo-themeTwo_3JfQ {
    line-height: 4
}
"
`;

exports[`Stylesheet Themed - Production mode - should create a deterministic stylesheet 1`] = `
"._6tvyw{z-index:1;display:flex}
.inLwD{z-index:2}
._2cR4h{z-index:3}
._1eYVB_3h9W{background-color:#ff0}
._3a3qh_3h9W{height:12px}
._1FZ-j_3h9W{line-height:6}
._1eYVB_3JfQ{background-color:red}
._3a3qh_3JfQ{height:8px}
._1FZ-j_3JfQ{line-height:4}
"
`;

exports[`Stylesheet Themed - Theme function ident - should create a deterministic stylesheet 1`] = `
"._6tvyw {
    z-index: 1;
    display: flex
}
.inLwD {
    z-index: 2
}
._2cR4h {
    z-index: 3
}
._1eYVB_theme_one_3h {
    background-color: yellow
}
._3a3qh_theme_one_3h {
    height: 12px
}
._1FZ-j_theme_one_3h {
    line-height: 6
}
._1eYVB_theme_two_3J {
    background-color: red
}
._3a3qh_theme_two_3J {
    height: 8px
}
._1FZ-j_theme_two_3J {
    line-height: 4
}
"
`;

exports[`Stylesheet Unused modules - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._1OJEF {
    height: 100px;
    width: 100px
}
"
`;

exports[`Stylesheet Unused modules - Custom idents - should create a deterministic stylesheet 1`] = `
".used-used_1OJEF {
    height: 100px;
    width: 100px
}
"
`;

exports[`Stylesheet Unused modules - Development mode - should create a deterministic stylesheet 1`] = `
".unused-unused_-XARm {
    color: red;
    background-color: blue
}
.used-used_1OJEF {
    height: 100px;
    width: 100px
}
"
`;

exports[`Stylesheet Unused modules - Production mode - should create a deterministic stylesheet 1`] = `
"._1OJEF{height:100px;width:100px}
"
`;

exports[`Stylesheet Unused modules - Theme function ident - should create a deterministic stylesheet 1`] = `
"._1OJEF {
    height: 100px;
    width: 100px
}
"
`;
